[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.991",
    "black>=22.12.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Patrick Arminio", email = "patrick.arminio@gmail.com"},
]
dependencies = [
    "HAP-python[QRCode]>=4.6.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
